<resources>
    <string name="app_name">NewsBeat</string>
    <string name="open_drawer">打开侧滑菜单</string>
    <string name="close_drawer">关闭侧滑菜单</string>
    <string name="add">添加</string>
    <string name="follow">关注</string>
    <string name="write_comments">写评论...</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="message">消息</string>
    <string name="send">发送</string>
    <string name="settings">设置</string>
    <string name="history">足迹</string>
    <string name="exit">退出</string>
    <string name="logout">退出</string>
    <string name="my_collections">我的收藏</string>
    <string name="my_histories">我的足迹</string>
    <string name="title_activity_settings1">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social
        recommendations
    </string>
    <string name="pref_description_social_recommendations">Recommendations for
        people to contact based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages
    </string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message
        notifications
    </string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="my_settings">设置</string>
    <string name="content_pic_mode">图文模式</string>
    <string name="text_size_mode">字体大小</string>
    <string name="about_us">关于我们</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="message_notification">消息通知</string>
    <string name="set_text_size_mode">设置字体大小</string>
</resources>
