<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/canvas_color"
    android:orientation="vertical"
    >
    <include layout="@layout/tool_bar"
             android:id="@+id/tool_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:id="@+id/content_pic_mode"
        android:layout_marginTop="@dimen/page_vertical"
        android:background="@color/color_white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_horizontal"
            android:text="@string/content_pic_mode"
            android:layout_centerVertical="true"
            android:textColor="@color/normal_txt_color"
            android:textSize="@dimen/tab_text_size"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="@dimen/switch_width"
            app:switchMinWidth="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/content_pic_switch"
            android:layout_marginRight="@dimen/page_horizontal"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:id="@+id/text_size_mode"
        android:layout_marginTop="@dimen/page_vertical"
        android:background="@color/color_white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_horizontal"
            android:text="@string/text_size_mode"
            android:layout_centerVertical="true"
            android:textColor="@color/normal_txt_color"
            android:textSize="@dimen/tab_text_size"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="@dimen/switch_width"
            app:switchMinWidth="@dimen/switch_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/text_size_switch"
            android:layout_marginRight="@dimen/page_horizontal"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:id="@+id/about_us"
        android:layout_marginTop="@dimen/page_vertical"
        android:background="@color/color_white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_horizontal"
            android:text="@string/about_us"
            android:layout_centerVertical="true"
            android:textColor="@color/normal_txt_color"
            android:textSize="@dimen/tab_text_size"/>


    </RelativeLayout>

</LinearLayout>
